Add git-daemon support for Ubuntu 10.04 & 12.04

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -20,3 +20,10 @@ suites:
     run_list:
       - recipe[git::default]
     attributes:
+  - name: server
+    run_list:
+      - recipe[git::server]
+    attributes:
+    excludes:
+      - centos-6.6
+
