--- a/jenkins-cookbook/.kitchen.yml
+++ b/jenkins-cookbook/.kitchen.yml
@@ -2,24 +2,20 @@
 driver:
   name: docker
   binary: docker
-  require_chef_omnibus: false
   socket: <%= ENV['DOCKER_HOST'] %>
+  require_chef_omnibus: true
 
 provisioner:
   name: nodes
 
 platforms:
   - name: centos-6.6
-    driver:
-      require_chef_omnibus: true
   - name: ubuntu-14.04
-    driver:
-      image: tragus/chef-omnibus
-      require_chef_omnibus: false
+
 suites:
   - name: master
     driver:
-      instance_name: jenkins_master 
+      instance_name: jenkins_master
       forward: 8080
     run_list:
       - recipe[tragus_jenkins::master]
@@ -38,8 +34,14 @@ suites:
       instance_name: jenkins_slave
       links: jenkins_master:master
     run_list:
+      - recipe[runit_helper::default]
       - recipe[tragus_jenkins::slave]
     attributes:
+      runit_helper:
+        centos:
+          start: /sbin/runsvdir /etc/sv
+        ubuntu:
+          start: /usr/sbin/runsvdir-start
       jenkins:
         slave:
           search_for_master: run_list:tragus_jenkins??master AND jenkins_master_prefix:/tk-jenkins
